force-app/main/default/objects/QB_Item__c/QB_Item__c.object-meta.xml
<CustomObject>
    <label>QB Item</label>
    <nameField>
        <label>QB Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>