force-app/main/default/objects/QB_Item__c/fields/Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID__c</fullName>
    <label>Parent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>