force-app/main/default/objects/QB_Item__c/fields/Preferred_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Vendor</label>
    <referenceTo>QB_Company__c</referenceTo>
    <relationshipLabel>QuickBooks Items</relationshipLabel>
    <relationshipName>QB_Items</relationshipName>
    <type>Lookup</type>
</CustomField>