force-app/main/default/objects/QB_Item__c/fields/QB_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Class_Name__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>