force-app/main/default/objects/QB_Item__c/fields/QB_Deposit_To_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Deposit_To_Account_ID__c</fullName>
    <label>Deposit To Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>