force-app/main/default/objects/QB_Item__c/fields/QB_Description__c.field-meta.xml
<CustomField>
    <fullName>QB_Description__c</fullName>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>