force-app/main/default/objects/QB_Item__c/fields/QB_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>QB_Discount_Percent__c</fullName>
    <label>Discount Percent</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>