force-app/main/default/objects/QB_Item__c/fields/QB_Display_Bundle_Components__c.field-meta.xml
<CustomField>
    <fullName>QB_Display_Bundle_Components__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Bundle Components</label>
    <type>Checkbox</type>
</CustomField>