force-app/main/default/objects/QB_Item__c/fields/QB_Do_Not_Match__c.field-meta.xml
<CustomField>
    <fullName>QB_Do_Not_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Match</label>
    <type>Checkbox</type>
</CustomField>