force-app/main/default/objects/QB_Item__c/fields/QB_Fully_Qualified_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Fully_Qualified_Name__c</fullName>
    <label>Fully Qualified Name (Truncated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>