force-app/main/default/objects/QB_Item__c/fields/QB_Fully_Qualified_Name_Full__c.field-meta.xml
<CustomField>
    <fullName>QB_Fully_Qualified_Name_Full__c</fullName>
    <label>Fully Qualified Name (Full)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>