force-app/main/default/objects/QB_Item__c/fields/QB_Inventory_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QB_Inventory_Start_Date__c</fullName>
    <label>Inventory Start Date</label>
    <type>Date</type>
</CustomField>