force-app/main/default/objects/QB_Item__c/fields/QB_Item__c.field-meta.xml
<CustomField>
    <fullName>QB_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category / Sub Item of</label>
    <referenceTo>QB_Item__c</referenceTo>
    <relationshipLabel>QB Items</relationshipLabel>
    <relationshipName>QB_Items</relationshipName>
    <type>Lookup</type>
</CustomField>