force-app/main/default/objects/QB_Item__c/fields/QB_Item_Name_Full__c.field-meta.xml
<CustomField>
    <fullName>QB_Item_Name_Full__c</fullName>
    <label>Item Name (Full)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>