force-app/main/default/objects/QB_Item__c/fields/QB_Last_Modified_in_QuickBooks_Date__c.field-meta.xml
<CustomField>
    <fullName>QB_Last_Modified_in_QuickBooks_Date__c</fullName>
    <label>Last Modified in QuickBooks Date</label>
    <type>DateTime</type>
</CustomField>