force-app/main/default/objects/QB_Item__c/fields/QB_Preferred_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Preferred_Vendor_ID__c</fullName>
    <label>Preferred Vendor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>