force-app/main/default/objects/QB_Item__c/fields/QB_Product_Code_SKU__c.field-meta.xml
<CustomField>
    <fullName>QB_Product_Code_SKU__c</fullName>
    <label>Product Code (SKU)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>