force-app/main/default/objects/QB_Item__c/fields/QB_Purchase_Cost__c.field-meta.xml
<CustomField>
    <fullName>QB_Purchase_Cost__c</fullName>
    <label>Purchase Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>