force-app/main/default/objects/QB_Item__c/fields/QB_Purchase_Tax_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Purchase_Tax_Code_ID__c</fullName>
    <label>Purchase Tax Code ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>