force-app/main/default/objects/QB_Item__c/fields/QB_Purchase_Tax_Included__c.field-meta.xml
<CustomField>
    <fullName>QB_Purchase_Tax_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Tax Included</label>
    <type>Checkbox</type>
</CustomField>