force-app/main/default/objects/QB_Item__c/fields/QB_Quantity_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>QB_Quantity_On_Hand__c</fullName>
    <label>Quantity On Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>