force-app/main/default/objects/QB_Item__c/fields/QB_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Reference_ID__c</fullName>
    <label>Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>