force-app/main/default/objects/QB_Item__c/fields/QB_Reorder_Point__c.field-meta.xml
<CustomField>
    <fullName>QB_Reorder_Point__c</fullName>
    <label>Reorder Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>