force-app/main/default/objects/QB_Item__c/fields/QB_Sales_Tax_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Sales_Tax_Code_Name__c</fullName>
    <label>Sales Tax Code Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>