force-app/main/default/objects/QB_Item__c/fields/QB_Sub_Item__c.field-meta.xml
<CustomField>
    <fullName>QB_Sub_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub Item</label>
    <type>Checkbox</type>
</CustomField>