force-app/main/default/objects/QB_Item__c/fields/QB_Tax_Category_Classification_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Tax_Category_Classification_Name__c</fullName>
    <label>Tax Category / Classification Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>