force-app/main/default/objects/QB_Item__c/fields/QB_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>QB_Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>