force-app/main/default/objects/QB_Item__c/fields/QB_Track_Quantity_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>QB_Track_Quantity_On_Hand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Quantity On Hand</label>
    <type>Checkbox</type>
</CustomField>