force-app/main/default/objects/QB_Item__c/fields/QB_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>QB_Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>